Fix home page split lists
Fixed overflowing text in lists for large screens
Fixed lists being small if the welcome box is large

--- a/web/static/index.css
+++ b/web/static/index.css
@@ -49,6 +49,9 @@ a:hover {
   .home-split-container {
     display: flex;
   }
+  .home-split-container * {
+    overflow: hidden;
+  }
 }
 
 /* Fieldset panels */
